# parallel-huffman-SPM

./: .gitignore  CMakeLists.txt  Dockerfile  HuffmanProject  README.md  measurements.sh  plot.py  speedup.sh
report/: main.tex
scripts/: random_words_gen.cpp
src/: main.cpp  utimer.cpp
src/huffman_base/: huffman_base.cpp  huffman_base.h
src/huffman_ff/: huffman_ff.cpp  huffman_ff.h
src/huffman_sequential/: huffman_seq.cpp  huffman_seq.h
src/huffman_threads/: huffman_threads.cpp  huffman_threads.h
utils/: rand
